--- a/DropDownList/Pages/Index.cshtml
+++ b/DropDownList/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Binding Data to DropDown List</h1>
+    <h1 class="display-4">Binding Binding  Data to DropDown List</h1>
     <hr/>
 
     <select id="Select1" asp-items="@(new SelectList(Model.DisplayData, "DispId", "SaleMan"))">
